# daedalus_network

./: pyproject.toml
c2/: LSTM_policy.py  c2_server.py  network.py  observation_vector.py  rl_policy.py
c2/attacker/: attack_script.py  heuristic_attacker.py
c2/pb/: c2_pb2.py  c2_pb2.pyi  c2_pb2_grpc.py  c2_pb2_grpc.pyi
c2/protos/: c2.proto
defender/: NetworkEnv.py  mbpo_config.json  train_mbpo.py
pb/: c2_pb2.py  c2_pb2_grpc.py  c2_pb2_grpc.pyi
protos/: c2.proto
