[tool.poetry]
name = "daedalus-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
netifaces = "^0.11.0"
tensorflow = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-grpc-plugin]
proto_path = "protos"
python_out = "pb"
